--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://chrisbuttery.github.io/elm-github-user-repos/dist/index.html" />
+<!-- <meta http-equiv="refresh" content="0; url=http://chrisbuttery.github.io/elm-github-user-repos/dist/index.html" /> -->
